# MathematicalGroups-CPP

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  direct_sum_example.cpp
include/mg/: DirectSum.hpp  DirectSumPlus.hpp  GroupConcept.hpp  GroupElementConcept.hpp  GroupIsomorphismEquality.hpp  GroupValidation.hpp  Isomorphism.hpp  MathGroup.hpp  mg.hpp
testing/: CMakeLists.txt  DirectSumTests.cpp  IsomorphismDirectSumRegressionTests.cpp  IsomorphismNestedDirectSumTests.cpp  MathGroupTests.cpp
